<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/searchWords_fatherLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E5E6E0"
    android:orientation="vertical"
    tools:context="com.writing.hlyin.dicttest.MainActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <SearchView
        android:id="@+id/searchWords_searchView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="150dp"
        android:searchIcon="@android:drawable/ic_menu_search"
        android:queryHint="请输入要查询的单词" />

        <Spinner
            android:id="@+id/matchMode_spinner"
            android:layout_alignParentRight="true"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:entries="@array/spingarr"
            />
    </RelativeLayout>


    <ListView
    android:id="@+id/lv1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="#969696" />


    <LinearLayout
        android:padding="20dp"
        android:id="@+id/searchWords_linerLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp">

            <TextView
                android:id="@+id/searchWords_key"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="abrogate"
                android:textColor="#000000"
                android:textSize="35sp" />
        </RelativeLayout>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/searchWords_posE_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageButton
                    android:id="@+id/searchWords_voiceE"
                    android:layout_height="match_parent"
                    android:layout_marginTop="3dp"
                    android:layout_marginBottom="3dp"
                    android:layout_width="30dp"
                    android:background="@android:color/transparent"
                    android:src="@drawable/horn_dict"
                    android:scaleType="fitCenter"/>

                <TextView
                    android:id="@+id/searchWords_psE"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="7dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:paddingTop="3dp"
                    android:text="@string/psE"
                    android:textColor="#3B3C3D"
                    android:textSize="16dp" />

                <TextView
                    android:layout_height="match_parent"
                    android:layout_width="50dp"
                    android:text="/"
                    android:gravity="center"
                    android:textColor="#6C6C6C"
                    android:textSize="14sp"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/searchWords_posA_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="180dp">

                <ImageButton
                    android:id="@+id/searchWords_voiceA"
                    android:layout_height="match_parent"
                    android:layout_marginTop="3dp"
                    android:layout_marginBottom="3dp"
                    android:layout_width="30dp"
                    android:background="@android:color/transparent"
                    android:src="@drawable/horn_dict"
                    android:scaleType="fitCenter"/>

                <TextView
                    android:id="@+id/searchWords_psA"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="7dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:paddingTop="3dp"
                    android:text="@string/psA"
                    android:textColor="#3B3C3D"
                    android:textSize="16dp" />
            </LinearLayout>
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/right_cursor" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:padding="10dp"
                    android:text="@string/posAcceptation"
                    android:textSize="15sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/searchWords_posAcceptation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/layer_list_view"
                android:paddingBottom="5dp"
                android:paddingLeft="20dp"
                android:paddingRight="10dp"
                android:paddingTop="5dp"
                android:text="@string/pos"
                android:textSize="15dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/right_cursor" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:padding="10dp"
                    android:text="@string/sent"
                    android:textSize="15sp" />
            </LinearLayout>
        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/layer_list_view">

            <TextView
                android:id="@+id/searchWords_sent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:paddingLeft="20dp"
                android:paddingRight="10dp"
                android:paddingTop="5dp"
                android:text="@string/pos"
                android:textSize="15dp" />
        </ScrollView>
    </LinearLayout>

</LinearLayout>
